force-app/main/default/objects/Appointment__c/fields/Appointment_channel__c.field-meta.xml
<CustomField>
    <fullName>Appointment_channel__c</fullName>
    <label>Appointment channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>