force-app/main/default/objects/Appointment__c/fields/Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Time__c</fullName>
    <formula>TEXT( Date__c ) &amp; &quot; | &quot; &amp; TEXT( Slot__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Date &amp; Time</label>
    <type>Text</type>
</CustomField>