force-app/main/default/objects/Appointment__c/fields/Appointment_Direct_Sales__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Direct_Sales__c</fullName>
    <label>Appointment Direct Sales (€ Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>