force-app/main/default/objects/Appointment__c/fields/Appointment_Influenced_Sales__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Influenced_Sales__c</fullName>
    <label>Appointment Sales (€ Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>