force-app/main/default/objects/Appointment__c/fields/Appointment_length__c.field-meta.xml
<CustomField>
    <fullName>Appointment_length__c</fullName>
    <label>Appointment length</label>
    <length>200</length>
    <type>Text</type>
</CustomField>