force-app/main/default/objects/Appointment__c/fields/AppointmentType__c.field-meta.xml
<CustomField>
    <fullName>AppointmentType__c</fullName>
    <description>Event description</description>
    <label>Appointment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Appointment (short)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>