force-app/main/default/objects/Appointment__c/fields/Arrival_status__c.field-meta.xml
<CustomField>
    <fullName>Arrival_status__c</fullName>
    <label>Arrival status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrived</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>