force-app/main/default/objects/Appointment__c/fields/Assigned_SA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the store associate</description>
    <label>Assigned SA</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>