force-app/main/default/objects/Appointment__c/fields/Customer_external_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_external_ID__c</fullName>
    <description>Client identifier</description>
    <externalId>true</externalId>
    <label>Customer external ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>