force-app/main/default/objects/Appointment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Appointment / store visit date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>