force-app/main/default/objects/Appointment__c/fields/Flag_Direct_Sales_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Flag_Direct_Sales_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag if appointment had a Direct Sales</label>
    <type>Checkbox</type>
</CustomField>