force-app/main/default/objects/Appointment__c/fields/Flag_Influenced_Sales_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Flag_Influenced_Sales_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag if appointment influenced Sales</label>
    <type>Checkbox</type>
</CustomField>